--- a/bin/run_colab.ipynb
+++ b/bin/run_colab.ipynb
@@ -18,7 +18,10 @@
     "! YOURTOKEN=MYTOKEN\n",
     "! URL=\"https://github.com/ameek2/Inducing-human-like-biases-in-moral-reasoning-LLMs/archive/refs/heads/ds000212_fine_tuning_bert.zip\"\n",
     "! curl --url $URL --header \"Authorization: Bearer $YOURTOKEN\" --header \"X-GitHub-Api-Version: 2022-11-28\" -LkO`\n",
-    "! unzip *.zip\n"
+    "! unzip *.zip\n",
+    "! cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
+    "! pip install -r requirements.txt\n",
+    "\n"
    ]
   },
   {
