--- a/bin/run_colab.ipynb
+++ b/bin/run_colab.ipynb
@@ -15,11 +15,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! YOURTOKEN=MYTOKEN\n",
-    "! URL=\"https://github.com/ameek2/Inducing-human-like-biases-in-moral-reasoning-LLMs/archive/refs/heads/ds000212_fine_tuning_bert.zip\"\n",
-    "! curl --url $URL --header \"Authorization: Bearer $YOURTOKEN\" --header \"X-GitHub-Api-Version: 2022-11-28\" -LkO`\n",
-    "! unzip *.zip\n",
-    "! cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
+    "! YOURTOKEN=<MY TOKEN HERE>   # Token from https://github.com/settings/tokens\n",
+    "! git clone https://$YOURTOKEN@github.com/ameek2/Inducing-human-like-biases-in-moral-reasoning-LLMs.git\n",
+    "! unzip ds000212_fine_tuning_bert.zip\n",
+    "! cd Inducing-human-like-biases-in-moral-reasoning-LLMs-ds000212_fine_tuning_bert/\n",
     "! pip install -r requirements.txt\n",
     "\n"
    ]
@@ -29,6 +28,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "! bash bin/train.sh --num_epochs=1 --only_train_head=False\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
