--- a/bin/run_colab.ipynb
+++ b/bin/run_colab.ipynb
@@ -17,10 +17,9 @@
    "source": [
     "! YOURTOKEN=<MY TOKEN HERE>   # Token from https://github.com/settings/tokens\n",
     "! git clone https://$YOURTOKEN@github.com/ameek2/Inducing-human-like-biases-in-moral-reasoning-LLMs.git\n",
-    "! unzip ds000212_fine_tuning_bert.zip\n",
     "! cd Inducing-human-like-biases-in-moral-reasoning-LLMs-ds000212_fine_tuning_bert/\n",
     "! pip install -r requirements.txt\n",
-    "\n"
+    "! bash bin/download_ethics_ds.sh "
    ]
   },
   {
@@ -29,7 +28,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! bash bin/train.sh --num_epochs=1 --only_train_head=False\n"
+    "! bash bin/train.sh --num_epochs=1 --only_train_head=False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext tensorboard\n",
+    "%tensorboard --logdir /content/Inducing-human-like-biases-in-moral-reasoning-LLMs/artifacts"
    ]
   },
   {
