Fixing Colab Script

--- a/bin/run_colab.ipynb
+++ b/bin/run_colab.ipynb
@@ -15,11 +15,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! YOURTOKEN=<MY TOKEN HERE>   # Token from https://github.com/settings/tokens\n",
-    "! git clone https://$YOURTOKEN@github.com/ameek2/Inducing-human-like-biases-in-moral-reasoning-LLMs.git\n",
-    "! cd Inducing-human-like-biases-in-moral-reasoning-LLMs-ds000212_fine_tuning_bert/\n",
-    "! pip install -r requirements.txt\n",
-    "! bash bin/download_ethics_ds.sh "
+    "%%shell\n",
+    "# Token from https://github.com/settings/tokens\n",
+    "YOURTOKEN=<MY TOKEN HERE> ; git clone https://$YOURTOKEN@github.com/ameek2/Inducing-human-like-biases-in-moral-reasoning-LLMs.git\n",
+    "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
+    "pip install -r requirements.txt\n",
+    "bash bin/download_ethics_ds.sh "
    ]
   },
   {
