Fixing Colab Script

--- a/bin/run_colab.ipynb
+++ b/bin/run_colab.ipynb
@@ -1,12 +1,18 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "1. Go to https://github.com/settings/tokens and generate personal token\n",
-    "2. Run code below with the token.\n"
+    "%%shell\n",
+    "# Token from https://github.com/settings/tokens\n",
+    "YOURTOKEN=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  ; git clone \"https://$YOURTOKEN@github.com/ameek2/Inducing-human-like-biases-in-moral-reasoning-LLMs.git\"\n",
+    "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
+    "git checkout ds000212_fine_tuning_bert\n",
+    "pip install -r requirements.txt\n",
+    "bash ./bin/download_ethics_ds.sh "
    ]
   },
   {
@@ -16,20 +22,8 @@
    "outputs": [],
    "source": [
     "%%shell\n",
-    "# Token from https://github.com/settings/tokens\n",
-    "YOURTOKEN=<MY TOKEN HERE> ; git clone https://$YOURTOKEN@github.com/ameek2/Inducing-human-like-biases-in-moral-reasoning-LLMs.git\n",
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "pip install -r requirements.txt\n",
-    "bash bin/download_ethics_ds.sh "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "! bash bin/train.sh --num_epochs=1 --only_train_head=False"
+    "bash ./bin/train.sh --num_epochs=1 --only_train_head=Fals"
    ]
   },
   {
