--- a/bin/run_colab.ipynb
+++ b/bin/run_colab.ipynb
@@ -7,10 +7,10 @@
    "outputs": [],
    "source": [
     "%%shell\n",
-    "# Token from https://github.com/settings/tokens\n",
+    "  # Token from https://github.com/settings/tokens\n",
     "YOURTOKEN=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  ; git clone \"https://$YOURTOKEN@github.com/ameek2/Inducing-human-like-biases-in-moral-reasoning-LLMs.git\"\n",
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "git checkout ds000212_fine_tuning_bert\n",
+    "git checkout ds000212_npy_files\n",
     "pip install -r requirements.txt\n",
     "bash ./bin/download_ethics_ds.sh "
    ]
