G Colab notebook fixes

--- a/bin/run_colab.ipynb
+++ b/bin/run_colab.ipynb
@@ -23,7 +23,19 @@
    "source": [
     "%%shell\n",
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "bash ./bin/train.sh --num_epochs=1 --only_train_head=Fals"
+    "git fetch origin\n",
+    "git checkout origin/ds000212_npy_files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%shell\n",
+    "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
+    "bash bin/train.sh --num_epochs=50 --only_train_head=False  --num_samples_test=1000 --num_samples_train=3000"
    ]
   },
   {
