Removing extra steps from Google Colab notebook

--- a/bin/run_colab.ipynb
+++ b/bin/run_colab.ipynb
@@ -7,12 +7,11 @@
    "outputs": [],
    "source": [
     "%%shell\n",
-    "  # Token from https://github.com/settings/tokens\n",
-    "YOURTOKEN=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  ; git clone \"https://$YOURTOKEN@github.com/ameek2/Inducing-human-like-biases-in-moral-reasoning-LLMs.git\"\n",
+    "# Token from https://github.com/settings/tokens\n",
+    "YOURTOKEN=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  \n",
+    "git clone \"https://$YOURTOKEN@github.com/ameek2/Inducing-human-like-biases-in-moral-reasoning-LLMs.git\"\n",
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "git checkout ds000212_npy_files\n",
-    "pip install -r requirements.txt\n",
-    "bash ./bin/download_ethics_ds.sh "
+    "pip install -r requirements.txt"
    ]
   },
   {
@@ -21,21 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%shell\n",
-    "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "git fetch origin\n",
-    "git checkout origin/ds000212_npy_files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%shell\n",
-    "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "bash bin/train.sh --num_epochs=50 --only_train_head=False  --num_samples_test=1000 --num_samples_train=3000"
+    "! bash build.sh"
    ]
   },
   {
