Colab script fix

--- a/bin/run_colab.ipynb
+++ b/bin/run_colab.ipynb
@@ -20,7 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! bash build.sh"
+    "%%shell\n",
+    "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
+    "bash build.sh"
    ]
   },
   {
