--- a/bin/run_colab.ipynb
+++ b/bin/run_colab.ipynb
@@ -11,7 +11,18 @@
     "YOURTOKEN=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  \n",
     "git clone \"https://$YOURTOKEN@github.com/ameek2/Inducing-human-like-biases-in-moral-reasoning-LLMs.git\"\n",
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "bash build.sh google_colab"
+    "bash run.sh install"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%shell\n",
+    "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
+    "bash run.sh load_data train"
    ]
   },
   {
