--- a/bin/run_colab.ipynb
+++ b/bin/run_colab.ipynb
@@ -6,12 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "%%shell\n",
     "# Token from https://github.com/settings/tokens\n",
     "YOURTOKEN=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  \n",
-    "git clone \"https://$YOURTOKEN@github.com/ameek2/Inducing-human-like-biases-in-moral-reasoning-LLMs.git\"\n",
-    "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "bash run.sh install"
+    "git clone \"https://$YOURTOKEN@github.com/ameek2/Inducing-human-like-biases-in-moral-reasoning-LLMs.git\""
    ]
   },
   {
@@ -22,7 +21,7 @@
    "source": [
     "%%shell\n",
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "bash run.sh load_data train"
+    "bash run.sh install prepare_datasets"
    ]
   },
   {
