Fixes to run in Google Colab

--- a/bin/run_colab.ipynb
+++ b/bin/run_colab.ipynb
@@ -21,6 +21,8 @@
    "source": [
     "%%shell\n",
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
+    "# git pull origin\n",
+    "# git checkout origin/15-build-script-n-google-colab\n",
     "bash run.sh install prepare_datasets"
    ]
   },
