--- a/bin/run_colab.ipynb
+++ b/bin/run_colab.ipynb
@@ -10,6 +10,9 @@
     "%%shell\n",
     "# Token from https://github.com/settings/tokens\n",
     "YOURTOKEN=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  \n",
+    "git config --global user.email \"artyomkarpov@gmail.com\"\n",
+    "git config --global user.name \"Artem K\"\n",
+    "\n",
     "git clone \"https://$YOURTOKEN@github.com/ameek2/Inducing-human-like-biases-in-moral-reasoning-LLMs.git\""
    ]
   },
@@ -21,9 +24,9 @@
    "source": [
     "%%shell\n",
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "# git pull origin\n",
-    "# git checkout origin/15-build-script-n-google-colab\n",
-    "bash run.sh install prepare_datasets"
+    "#git pull origin\n",
+    "#git checkout origin/15-build-script-n-google-colab\n",
+    "bash run.sh install "
    ]
   },
   {
@@ -32,8 +35,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%shell\n",
+    "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
+    "git checkout origin/ds000212_npy_files -- data/functional_flattened/*\n",
+    "bash run.sh datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%load_ext tensorboard\n",
-    "%tensorboard --logdir /content/Inducing-human-like-biases-in-moral-reasoning-LLMs/artifacts"
+    "%tensorboard --logdir /content/Inducing-human-like-biases-in-moral-reasoning-LLMs/artifacts\n"
    ]
   },
   {
