Colab script: run run.sh

--- a/bin/run_colab.ipynb
+++ b/bin/run_colab.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "%%shell\n",
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "git checkout origin/ds000212_npy_files -- data/functional_flattened/*\n",
+    "# git checkout origin/ds000212_npy_files -- data/functional_flattened/*\n",
     "bash run.sh datasets"
    ]
   },
@@ -46,7 +46,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%shell\n",
+    "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
+    "#git checkout origin/15-build-script-n-google-colab\n",
+    "bash run.sh train --num_epochs=10 --only_train_head=True --train_datasets ethics/commonsense/cm_train.csv --batch_size 36 --num_samples_train 1000"
+   ]
   },
   {
    "cell_type": "code",
