Fix G Colab script

--- a/bin/run_colab.ipynb
+++ b/bin/run_colab.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "%%shell\n",
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "# git checkout origin/ds000212_npy_files -- data/functional_flattened/*\n",
+    "git checkout origin/ds000212_npy_files -- 'data/functional_flattened/*'\n",
     "bash run.sh datasets"
    ]
   },
