--- a/bin/run_colab.ipynb
+++ b/bin/run_colab.ipynb
@@ -6,13 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "%%shell\n",
-    "  # Token from https://github.com/settings/tokens\n",
-    "YOURTOKEN=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  ; git clone \"https://$YOURTOKEN@github.com/ameek2/Inducing-human-like-biases-in-moral-reasoning-LLMs.git\"\n",
-    "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "git checkout ds000212_npy_files\n",
-    "pip install -r requirements.txt\n",
-    "bash ./bin/download_ethics_ds.sh "
+    "# Token from https://github.com/settings/tokens\n",
+    "YOURTOKEN=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  \n",
+    "git config --global user.email \"artyomkarpov@gmail.com\"\n",
+    "git config --global user.name \"Artem K\"\n",
+    "\n",
+    "git clone \"https://$YOURTOKEN@github.com/ameek2/Inducing-human-like-biases-in-moral-reasoning-LLMs.git\""
    ]
   },
   {
@@ -23,8 +24,9 @@
    "source": [
     "%%shell\n",
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "git fetch origin\n",
-    "git checkout origin/ds000212_npy_files"
+    "#git pull origin\n",
+    "#git checkout origin/15-build-script-n-google-colab\n",
+    "bash run.sh install "
    ]
   },
   {
@@ -35,7 +37,20 @@
    "source": [
     "%%shell\n",
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "bash bin/train.sh --num_epochs=50 --only_train_head=False  --num_samples_test=1000 --num_samples_train=3000"
+    "git checkout origin/ds000212_npy_files -- 'data/functional_flattened/*'\n",
+    "bash run.sh datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%shell\n",
+    "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
+    "#git checkout origin/15-build-script-n-google-colab\n",
+    "bash run.sh train --num_epochs=10 --only_train_head=True --train_datasets ethics/commonsense/cm_train.csv --batch_size 36 --num_samples_train 1000"
    ]
   },
   {
@@ -45,7 +60,7 @@
    "outputs": [],
    "source": [
     "%load_ext tensorboard\n",
-    "%tensorboard --logdir /content/Inducing-human-like-biases-in-moral-reasoning-LLMs/artifacts"
+    "%tensorboard --logdir /content/Inducing-human-like-biases-in-moral-reasoning-LLMs/artifacts\n"
    ]
   },
   {
