Docker file fixes

--- a/bin/run_colab.ipynb
+++ b/bin/run_colab.ipynb
@@ -50,7 +50,7 @@
     "%%shell\n",
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
     "#git checkout origin/15-build-script-n-google-colab\n",
-    "bash run.sh train --num_epochs=10 --only_train_head=True --train_datasets ethics/commonsense/cm_train.csv --batch_size 36 --num_samples_train 1000"
+    "bash run.sh train --num_epochs=3 --only_train_head=False --train_datasets ethics/commonsense/cm_train.csv --batch_size 36 --num_samples_train 1000"
    ]
   },
   {
