(wip) To run on Google Colab

--- a/bin/run_colab.ipynb
+++ b/bin/run_colab.ipynb
@@ -6,14 +6,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "%%shell\n",
     "# Token from https://github.com/settings/tokens\n",
-    "YOURTOKEN=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  \n",
+    "YOURTOKEN=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\n",
     "git config --global user.email \"artyomkarpov@gmail.com\"\n",
     "git config --global user.name \"Artem K\"\n",
     "\n",
-    "git clone \"https://$YOURTOKEN@github.com/ameek2/Inducing-human-like-biases-in-moral-reasoning-LLMs.git\""
+    "git clone \"https://$YOURTOKEN@github.com/ameek2/Inducing-human-like-biases-in-moral-reasoning-LLMs.git\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%shell\n",
+    "python3 -m pip install pipenv \n",
+    "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
+    "#git checkout origin/26-ds000212-fmriprep\n",
+    "git pull\n",
+    "python3 -m pipenv --python $( which python3 ) install\n",
+    "python3 -m pip install datalad-installer\n",
+    "datalad-installer --sudo ok datalad\n",
+    "datalad-installer --sudo ok git-annex -m datalad/git-annex:release"
    ]
   },
   {
@@ -24,21 +40,7 @@
    "source": [
     "%%shell\n",
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "#git pull origin\n",
-    "#git checkout origin/15-build-script-n-google-colab\n",
-    "bash run.sh install "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%shell\n",
-    "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "git checkout origin/ds000212_npy_files -- 'data/functional_flattened/*'\n",
-    "bash run.sh datasets"
+    "python3 -m pipenv --python $( which python3 ) run bash run.sh datasets"
    ]
   },
   {
@@ -64,6 +66,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
