Not nomalizing if already. Data investigation.

--- a/bin/run_colab.ipynb
+++ b/bin/run_colab.ipynb
@@ -22,14 +22,17 @@
    "outputs": [],
    "source": [
     "%%shell\n",
-    "python3 -m pip install pipenv \n",
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "#git checkout origin/26-ds000212-fmriprep\n",
-    "git pull\n",
-    "python3 -m pipenv --python $( which python3 ) install\n",
+    "git pull origin 19-prepare-ds000212\n",
+    "\n",
     "python3 -m pip install datalad-installer\n",
     "datalad-installer --sudo ok datalad\n",
-    "datalad-installer --sudo ok git-annex -m datalad/git-annex:release"
+    "datalad-installer --sudo ok git-annex -m datalad/git-annex:release\n",
+    "\n",
+    "python3 -m pip install pipenv \n",
+    "python3 -m pipenv --python $( which python3 ) install\n",
+    "\n",
+    "#python3 -m pip install -r requirements.txt\n"
    ]
   },
   {
@@ -40,7 +43,8 @@
    "source": [
     "%%shell\n",
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "python3 -m pipenv --python $( which python3 ) run bash run.sh datasets"
+    "git pull origin 19-prepare-ds000212\n",
+    "pipenv run bash ./run.sh datasets"
    ]
   },
   {
@@ -51,8 +55,11 @@
    "source": [
     "%%shell\n",
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "#git checkout origin/15-build-script-n-google-colab\n",
-    "bash run.sh train --num_epochs=3 --only_train_head=False --train_datasets ethics/commonsense/cm_train.csv --batch_size 36 --num_samples_train 1000"
+    "git pull origin 19-prepare-ds000212\n",
+    "# bash run.sh train --num_epochs=3 --only_train_head=False --train_datasets ethics/commonsense/cm_train.csv --batch_size 36 --num_samples_train 1000\n",
+    "\n",
+    "python3 -m pipenv --python $( which python3 ) run \\\n",
+    "  bash run.sh train --num_epochs=0 --only_train_head=False --batch_size 10 --num_samples_train 200 --num_samples_test 1000\n"
    ]
   },
   {
