(wip) To run on Google Colab

--- a/bin/run_colab.ipynb
+++ b/bin/run_colab.ipynb
@@ -44,6 +44,7 @@
     "%%shell\n",
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
     "git pull origin 19-prepare-ds000212\n",
+    "#pipenv run bash ./run.sh datasets\n",
     "pipenv run bash ./run.sh datasets"
    ]
   },
