(wip) Configuring python version. And one list of python packages

--- a/bin/run_colab.ipynb
+++ b/bin/run_colab.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "%%shell\n",
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "git pull origin 19-prepare-ds000212\n",
+    "# git pull origin 19-prepare-ds000212\n",
     "\n",
     "python3 -m pip install datalad-installer\n",
     "datalad-installer --sudo ok datalad\n",
