(wip) To run on Google Colab

--- a/bin/run_colab.ipynb
+++ b/bin/run_colab.ipynb
@@ -23,16 +23,13 @@
    "source": [
     "%%shell\n",
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "# git pull origin 19-prepare-ds000212\n",
     "\n",
     "python3 -m pip install datalad-installer\n",
     "datalad-installer --sudo ok datalad\n",
     "datalad-installer --sudo ok git-annex -m datalad/git-annex:release\n",
     "\n",
     "python3 -m pip install pipenv \n",
-    "python3 -m pipenv --python $( which python3 ) install\n",
-    "\n",
-    "#python3 -m pip install -r requirements.txt\n"
+    "python3 -m pipenv --python $( which python3 ) install\n"
    ]
   },
   {
@@ -43,8 +40,6 @@
    "source": [
     "%%shell\n",
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "git pull origin 19-prepare-ds000212\n",
-    "#pipenv run bash ./run.sh datasets\n",
     "pipenv run bash ./run.sh datasets"
    ]
   },
@@ -56,8 +51,6 @@
    "source": [
     "%%shell\n",
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "git pull origin 19-prepare-ds000212\n",
-    "# bash run.sh train --num_epochs=3 --only_train_head=False --train_datasets ethics/commonsense/cm_train.csv --batch_size 36 --num_samples_train 1000\n",
     "\n",
     "python3 -m pipenv --python $( which python3 ) run \\\n",
     "  bash run.sh train --num_epochs=0 --only_train_head=False --batch_size 10 --num_samples_train 200 --num_samples_test 1000\n"
