(wip) Consolidating python3, pipenv

--- a/bin/run_colab.ipynb
+++ b/bin/run_colab.ipynb
@@ -25,11 +25,9 @@
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
     "\n",
     "python3 -m pip install datalad-installer\n",
-    "datalad-installer --sudo ok datalad\n",
     "datalad-installer --sudo ok git-annex -m datalad/git-annex:release\n",
     "\n",
-    "python3 -m pip install pipenv \n",
-    "python3 -m pipenv --python $( which python3 ) install\n"
+    "bash ./run.sh provision\n"
    ]
   },
   {
