(wip) Changes to run at GCP

--- a/bin/run_colab.ipynb
+++ b/bin/run_colab.ipynb
@@ -22,6 +22,7 @@
    "outputs": [],
    "source": [
     "%%shell\n",
+    "apt --fix-broken install  # Worked for me to overcome error to install git-annex\n",
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
     "bash ./run.sh provision\n"
    ]
