--- a/bin/run_colab.ipynb
+++ b/bin/run_colab.ipynb
@@ -6,14 +6,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "%%shell\n",
     "# Token from https://github.com/settings/tokens\n",
-    "YOURTOKEN=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  \n",
+    "YOURTOKEN=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\n",
     "git config --global user.email \"artyomkarpov@gmail.com\"\n",
     "git config --global user.name \"Artem K\"\n",
     "\n",
-    "git clone \"https://$YOURTOKEN@github.com/ameek2/Inducing-human-like-biases-in-moral-reasoning-LLMs.git\""
+    "git clone \"https://$YOURTOKEN@github.com/ameek2/Inducing-human-like-biases-in-moral-reasoning-LLMs.git\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%shell\n",
+    "apt --fix-broken install  # Worked for me to overcome error to install git-annex\n",
+    "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
+    "bash ./run.sh provision\n"
    ]
   },
   {
@@ -24,9 +35,7 @@
    "source": [
     "%%shell\n",
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "#git pull origin\n",
-    "#git checkout origin/15-build-script-n-google-colab\n",
-    "bash run.sh install "
+    "pipenv run bash ./run.sh datasets"
    ]
   },
   {
@@ -37,20 +46,9 @@
    "source": [
     "%%shell\n",
     "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "git checkout origin/ds000212_npy_files -- 'data/functional_flattened/*'\n",
-    "bash run.sh datasets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%shell\n",
-    "cd Inducing-human-like-biases-in-moral-reasoning-LLMs\n",
-    "#git checkout origin/15-build-script-n-google-colab\n",
-    "bash run.sh train --num_epochs=10 --only_train_head=True --train_datasets ethics/commonsense/cm_train.csv --batch_size 36 --num_samples_train 1000"
+    "\n",
+    "python3 -m pipenv --python $( which python3 ) run \\\n",
+    "  bash run.sh train --num_epochs=0 --only_train_head=False --batch_size 10 --num_samples_train 200 --num_samples_test 1000\n"
    ]
   },
   {
@@ -64,6 +62,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
