--- a/data/ds000212_learning-from-brains/_check.ipynb
+++ b/data/ds000212_learning-from-brains/_check.ipynb
@@ -2,18 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/art/.local/share/virtualenvs/Inducing-human-like-biases-in-moral-reason-eYvEhHxD/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-24T18:22:39.571508700Z",
+     "start_time": "2023-08-24T18:22:36.753516116Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import webdataset as wds   \n",
     "from typing import Dict, Tuple, Generator\n",
